tests/baselines/reference/tsxAttributeValueTemplateLiteral1(jsx=preserve,target=esnext).errors.txt
tests/cases/conformance/jsx/template/file.tsx(1,1): error TS1202: Import assignment cannot be used when targeting ECMAScript modules. Consider using 'import * as ns from "mod"', 'import {a} from "mod"', 'import d from "mod"', or another module format instead.


==== tests/cases/conformance/jsx/template/file.tsx (1 errors) ====
    import React = require('react');
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1202: Import assignment cannot be used when targeting ECMAScript modules. Consider using 'import * as ns from "mod"', 'import {a} from "mod"', 'import d from "mod"', or another module format instead.
    
    interface Prop {
        foo: string,
    }
    
    function Comp(p: Prop) {
        return <div>{p.foo}</div>;
    }
    
    const a = 42;
    
    <Comp foo=`foo` />;
    <Comp foo=`foo${a}` />;
    <Comp foo=`foo${a}foo` />;
    